// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sankey bar chart rendering Should render the Sankey chart with string node data 1`] = `
<div>
  <div
    class="fui-sc__root"
    role="presentation"
  >
    <div
      class="fui-sc__chartWrapper"
      data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":1,\\"memorizeCurrent\\":true}}"
    >
      <svg
        height="436"
        id="sankeyChart2"
        width="864"
      >
        <g
          class="fui-sc__nodes"
        >
          <g
            id="nodeGElement6-0"
          >
            <rect
              aria-label="node 192.168.42.72 with weight 80"
              fill="#757575"
              height="237.53846153846155"
              id="nodeBar5-0"
              opacity="1"
              role="img"
              stroke="#4B3867"
              stroke-width="2"
              tabindex="0"
              width="124"
              x="48"
              y="36"
            />
            <g
              class="fui-sc__nodeTextContainer"
            >
              <g
                class="nodeName"
              >
                <text
                  aria-hidden="true"
                  dx="0.4em"
                  dy="1.2em"
                  fill="#FFFFFF"
                  font-size="10"
                  font-weight="regular"
                  id="nodeBar5-0-name"
                  text-anchor="start"
                  x="48"
                  y="36"
                >
                  192.168.42.72
                </text>
              </g>
              <text
                aria-hidden="true"
                dx="0.4em"
                dy="2em"
                fill="#FFFFFF"
                font-size="14"
                font-weight="bold"
                text-anchor="start"
                x="48"
                y="36"
              >
                80
              </text>
            </g>
          </g>
        </g>
        <g
          class="fui-sc__nodes"
        >
          <g
            id="nodeGElement6-1"
          >
            <rect
              aria-label="node 172.152.48.13 with weight 50"
              fill="#8764B8"
              height="148.46153846153845"
              id="nodeBar5-1"
              opacity="1"
              role="img"
              stroke="#4B3867"
              stroke-width="2"
              tabindex="0"
              width="124"
              x="48"
              y="281.53846153846155"
            />
            <g
              class="fui-sc__nodeTextContainer"
            >
              <g
                class="nodeName"
              >
                <text
                  aria-hidden="true"
                  dx="0.4em"
                  dy="1.2em"
                  fill="#FFFFFF"
                  font-size="10"
                  font-weight="regular"
                  id="nodeBar5-1-name"
                  text-anchor="start"
                  x="48"
                  y="281.53846153846155"
                >
                  172.152.48.13
                </text>
              </g>
              <text
                aria-hidden="true"
                dx="0.4em"
                dy="2em"
                fill="#FFFFFF"
                font-size="14"
                font-weight="bold"
                text-anchor="start"
                x="48"
                y="281.53846153846155"
              >
                50
              </text>
            </g>
          </g>
        </g>
        <g
          class="fui-sc__links"
          stroke-opacity="1"
        >
          <g>
            <defs>
              <lineargradient
                id="gradient-link1-0"
                x1="0%"
                x2="100%"
                y1="0%"
                y2="0%"
              >
                <stop
                  offset="0"
                  stop-color="#757575"
                />
                <stop
                  offset="100%"
                  stop-color="#757575"
                />
              </lineargradient>
            </defs>
            <path
              aria-label="link from 192.168.42.72 to 124.360.55.1 with weight 80"
              d="M172,36C455.5,36,455.5,36,739,36L739,273.538C455.5,273.538,455.5,273.538,172,273.538Z"
              fill-opacity="1"
              id="link1-0"
              role="img"
              stroke="#757575"
              stroke-opacity="1"
              stroke-width="2"
              tabindex="0"
            />
          </g>
        </g>
        <g
          class="fui-sc__links"
          stroke-opacity="1"
        >
          <g>
            <defs>
              <lineargradient
                id="gradient-link1-1"
                x1="0%"
                x2="100%"
                y1="0%"
                y2="0%"
              >
                <stop
                  offset="0"
                  stop-color="#8764B8"
                />
                <stop
                  offset="100%"
                  stop-color="#8764B8"
                />
              </lineargradient>
            </defs>
            <path
              aria-label="link from 172.152.48.13 to 192.564.10.2 with weight 50"
              d="M172,281.538C455.5,281.538,455.5,281.538,739,281.538L739,430C455.5,430,455.5,430,172,430Z"
              fill-opacity="1"
              id="link1-1"
              role="img"
              stroke="#757575"
              stroke-opacity="1"
              stroke-width="2"
              tabindex="0"
            />
          </g>
        </g>
        <g
          class="fui-sc__nodes"
        >
          <g
            id="nodeGElement6-2"
          >
            <rect
              aria-label="node 124.360.55.1 with weight 80"
              fill="#757575"
              height="237.53846153846155"
              id="nodeBar5-2"
              opacity="1"
              role="img"
              stroke="#4B3867"
              stroke-width="2"
              tabindex="0"
              width="124"
              x="739"
              y="36"
            />
            <g
              class="fui-sc__nodeTextContainer"
            >
              <g
                class="nodeName"
              >
                <text
                  aria-hidden="true"
                  dx="0.4em"
                  dy="1.2em"
                  fill="#FFFFFF"
                  font-size="10"
                  font-weight="regular"
                  id="nodeBar5-2-name"
                  text-anchor="start"
                  x="739"
                  y="36"
                >
                  124.360.55.1
                </text>
              </g>
              <text
                aria-hidden="true"
                dx="0.4em"
                dy="2em"
                fill="#FFFFFF"
                font-size="14"
                font-weight="bold"
                text-anchor="start"
                x="739"
                y="36"
              >
                80
              </text>
            </g>
          </g>
        </g>
        <g
          class="fui-sc__nodes"
        >
          <g
            id="nodeGElement6-3"
          >
            <rect
              aria-label="node 192.564.10.2 with weight 50"
              fill="#8764B8"
              height="148.46153846153845"
              id="nodeBar5-3"
              opacity="1"
              role="img"
              stroke="#4B3867"
              stroke-width="2"
              tabindex="0"
              width="124"
              x="739"
              y="281.53846153846155"
            />
            <g
              class="fui-sc__nodeTextContainer"
            >
              <g
                class="nodeName"
              >
                <text
                  aria-hidden="true"
                  dx="0.4em"
                  dy="1.2em"
                  fill="#FFFFFF"
                  font-size="10"
                  font-weight="regular"
                  id="nodeBar5-3-name"
                  text-anchor="start"
                  x="739"
                  y="281.53846153846155"
                >
                  192.564.10.2
                </text>
              </g>
              <text
                aria-hidden="true"
                dx="0.4em"
                dy="2em"
                fill="#FFFFFF"
                font-size="14"
                font-weight="bold"
                text-anchor="start"
                x="739"
                y="281.53846153846155"
              >
                50
              </text>
            </g>
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Sankey chart - Theme Should reflect theme change 1`] = `
<div>
  <div
    class="fui-FluentProvider fui-FluentProvider1"
    dir="ltr"
  >
    <div
      class="fui-sc__root"
      role="presentation"
    >
      <div
        class="fui-sc__chartWrapper"
        data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":1,\\"memorizeCurrent\\":true}}"
      >
        <svg
          height="436"
          id="sankeyChart3"
          width="864"
        >
          <g
            class="fui-sc__nodes"
          >
            <g
              id="nodeGElement7-0"
            >
              <rect
                aria-label="node 192.168.42.72 with weight 80"
                fill="#757575"
                height="237.53846153846155"
                id="nodeBar6-0"
                opacity="1"
                role="img"
                stroke="#4B3867"
                stroke-width="2"
                tabindex="0"
                width="124"
                x="48"
                y="36"
              />
              <g
                class="fui-sc__nodeTextContainer"
              >
                <g
                  class="nodeName"
                >
                  <text
                    aria-hidden="true"
                    dx="0.4em"
                    dy="1.2em"
                    fill="#FFFFFF"
                    font-size="10"
                    font-weight="regular"
                    id="nodeBar6-0-name"
                    text-anchor="start"
                    x="48"
                    y="36"
                  >
                    192.168.42.72
                  </text>
                </g>
                <text
                  aria-hidden="true"
                  dx="0.4em"
                  dy="2em"
                  fill="#FFFFFF"
                  font-size="14"
                  font-weight="bold"
                  text-anchor="start"
                  x="48"
                  y="36"
                >
                  80
                </text>
              </g>
            </g>
          </g>
          <g
            class="fui-sc__nodes"
          >
            <g
              id="nodeGElement7-1"
            >
              <rect
                aria-label="node 172.152.48.13 with weight 50"
                fill="#8764B8"
                height="148.46153846153845"
                id="nodeBar6-1"
                opacity="1"
                role="img"
                stroke="#4B3867"
                stroke-width="2"
                tabindex="0"
                width="124"
                x="48"
                y="281.53846153846155"
              />
              <g
                class="fui-sc__nodeTextContainer"
              >
                <g
                  class="nodeName"
                >
                  <text
                    aria-hidden="true"
                    dx="0.4em"
                    dy="1.2em"
                    fill="#FFFFFF"
                    font-size="10"
                    font-weight="regular"
                    id="nodeBar6-1-name"
                    text-anchor="start"
                    x="48"
                    y="281.53846153846155"
                  >
                    172.152.48.13
                  </text>
                </g>
                <text
                  aria-hidden="true"
                  dx="0.4em"
                  dy="2em"
                  fill="#FFFFFF"
                  font-size="14"
                  font-weight="bold"
                  text-anchor="start"
                  x="48"
                  y="281.53846153846155"
                >
                  50
                </text>
              </g>
            </g>
          </g>
          <g
            class="fui-sc__links"
            stroke-opacity="1"
          >
            <g>
              <defs>
                <lineargradient
                  id="gradient-link2-0"
                  x1="0%"
                  x2="100%"
                  y1="0%"
                  y2="0%"
                >
                  <stop
                    offset="0"
                    stop-color="#757575"
                  />
                  <stop
                    offset="100%"
                    stop-color="#757575"
                  />
                </lineargradient>
              </defs>
              <path
                aria-label="link from 192.168.42.72 to 124.360.55.1 with weight 80"
                d="M172,36C455.5,36,455.5,36,739,36L739,273.538C455.5,273.538,455.5,273.538,172,273.538Z"
                fill-opacity="1"
                id="link2-0"
                role="img"
                stroke="#757575"
                stroke-opacity="1"
                stroke-width="2"
                tabindex="0"
              />
            </g>
          </g>
          <g
            class="fui-sc__links"
            stroke-opacity="1"
          >
            <g>
              <defs>
                <lineargradient
                  id="gradient-link2-1"
                  x1="0%"
                  x2="100%"
                  y1="0%"
                  y2="0%"
                >
                  <stop
                    offset="0"
                    stop-color="#8764B8"
                  />
                  <stop
                    offset="100%"
                    stop-color="#8764B8"
                  />
                </lineargradient>
              </defs>
              <path
                aria-label="link from 172.152.48.13 to 192.564.10.2 with weight 50"
                d="M172,281.538C455.5,281.538,455.5,281.538,739,281.538L739,430C455.5,430,455.5,430,172,430Z"
                fill-opacity="1"
                id="link2-1"
                role="img"
                stroke="#757575"
                stroke-opacity="1"
                stroke-width="2"
                tabindex="0"
              />
            </g>
          </g>
          <g
            class="fui-sc__nodes"
          >
            <g
              id="nodeGElement7-2"
            >
              <rect
                aria-label="node 124.360.55.1 with weight 80"
                fill="#757575"
                height="237.53846153846155"
                id="nodeBar6-2"
                opacity="1"
                role="img"
                stroke="#4B3867"
                stroke-width="2"
                tabindex="0"
                width="124"
                x="739"
                y="36"
              />
              <g
                class="fui-sc__nodeTextContainer"
              >
                <g
                  class="nodeName"
                >
                  <text
                    aria-hidden="true"
                    dx="0.4em"
                    dy="1.2em"
                    fill="#FFFFFF"
                    font-size="10"
                    font-weight="regular"
                    id="nodeBar6-2-name"
                    text-anchor="start"
                    x="739"
                    y="36"
                  >
                    124.360.55.1
                  </text>
                </g>
                <text
                  aria-hidden="true"
                  dx="0.4em"
                  dy="2em"
                  fill="#FFFFFF"
                  font-size="14"
                  font-weight="bold"
                  text-anchor="start"
                  x="739"
                  y="36"
                >
                  80
                </text>
              </g>
            </g>
          </g>
          <g
            class="fui-sc__nodes"
          >
            <g
              id="nodeGElement7-3"
            >
              <rect
                aria-label="node 192.564.10.2 with weight 50"
                fill="#8764B8"
                height="148.46153846153845"
                id="nodeBar6-3"
                opacity="1"
                role="img"
                stroke="#4B3867"
                stroke-width="2"
                tabindex="0"
                width="124"
                x="739"
                y="281.53846153846155"
              />
              <g
                class="fui-sc__nodeTextContainer"
              >
                <g
                  class="nodeName"
                >
                  <text
                    aria-hidden="true"
                    dx="0.4em"
                    dy="1.2em"
                    fill="#FFFFFF"
                    font-size="10"
                    font-weight="regular"
                    id="nodeBar6-3-name"
                    text-anchor="start"
                    x="739"
                    y="281.53846153846155"
                  >
                    192.564.10.2
                  </text>
                </g>
                <text
                  aria-hidden="true"
                  dx="0.4em"
                  dy="2em"
                  fill="#FFFFFF"
                  font-size="14"
                  font-weight="bold"
                  text-anchor="start"
                  x="739"
                  y="281.53846153846155"
                >
                  50
                </text>
              </g>
            </g>
          </g>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Sankey chart rendering Should re-render the Sankey chart with data 1`] = `
<div>
  <div
    aria-label="Graph has no data to display"
    id="_SankeyChart_empty3"
    role="alert"
    style="opacity: 0;"
  />
</div>
`;

exports[`Sankey chart rendering Should re-render the Sankey chart with data 2`] = `
<div>
  <div
    class="fui-sc__root"
    role="presentation"
    style=""
  >
    <div
      class="fui-sc__chartWrapper"
      data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":1,\\"memorizeCurrent\\":true}}"
    >
      <svg
        height="436"
        id="sankeyChart2"
        width="864"
      >
        <g
          class="fui-sc__nodes"
        >
          <g
            id="nodeGElement6-0"
          >
            <rect
              aria-label="node 192.168.42.72 with weight 80"
              fill="#757575"
              height="237.53846153846155"
              id="nodeBar5-0"
              opacity="1"
              role="img"
              stroke="#4B3867"
              stroke-width="2"
              tabindex="0"
              width="124"
              x="48"
              y="36"
            />
            <g
              class="fui-sc__nodeTextContainer"
            >
              <g
                class="nodeName"
              >
                <text
                  aria-hidden="true"
                  dx="0.4em"
                  dy="1.2em"
                  fill="#FFFFFF"
                  font-size="10"
                  font-weight="regular"
                  id="nodeBar5-0-name"
                  text-anchor="start"
                  x="48"
                  y="36"
                >
                  192.168.42.72
                </text>
              </g>
              <text
                aria-hidden="true"
                dx="0.4em"
                dy="2em"
                fill="#FFFFFF"
                font-size="14"
                font-weight="bold"
                text-anchor="start"
                x="48"
                y="36"
              >
                80
              </text>
            </g>
          </g>
        </g>
        <g
          class="fui-sc__nodes"
        >
          <g
            id="nodeGElement6-1"
          >
            <rect
              aria-label="node 172.152.48.13 with weight 50"
              fill="#8764B8"
              height="148.46153846153845"
              id="nodeBar5-1"
              opacity="1"
              role="img"
              stroke="#4B3867"
              stroke-width="2"
              tabindex="0"
              width="124"
              x="48"
              y="281.53846153846155"
            />
            <g
              class="fui-sc__nodeTextContainer"
            >
              <g
                class="nodeName"
              >
                <text
                  aria-hidden="true"
                  dx="0.4em"
                  dy="1.2em"
                  fill="#FFFFFF"
                  font-size="10"
                  font-weight="regular"
                  id="nodeBar5-1-name"
                  text-anchor="start"
                  x="48"
                  y="281.53846153846155"
                >
                  172.152.48.13
                </text>
              </g>
              <text
                aria-hidden="true"
                dx="0.4em"
                dy="2em"
                fill="#FFFFFF"
                font-size="14"
                font-weight="bold"
                text-anchor="start"
                x="48"
                y="281.53846153846155"
              >
                50
              </text>
            </g>
          </g>
        </g>
        <g
          class="fui-sc__links"
          stroke-opacity="1"
        >
          <g>
            <defs>
              <lineargradient
                id="gradient-link1-0"
                x1="0%"
                x2="100%"
                y1="0%"
                y2="0%"
              >
                <stop
                  offset="0"
                  stop-color="#757575"
                />
                <stop
                  offset="100%"
                  stop-color="#757575"
                />
              </lineargradient>
            </defs>
            <path
              aria-label="link from 192.168.42.72 to 124.360.55.1 with weight 80"
              d="M172,36C455.5,36,455.5,36,739,36L739,273.538C455.5,273.538,455.5,273.538,172,273.538Z"
              fill-opacity="1"
              id="link1-0"
              role="img"
              stroke="#757575"
              stroke-opacity="1"
              stroke-width="2"
              tabindex="0"
            />
          </g>
        </g>
        <g
          class="fui-sc__links"
          stroke-opacity="1"
        >
          <g>
            <defs>
              <lineargradient
                id="gradient-link1-1"
                x1="0%"
                x2="100%"
                y1="0%"
                y2="0%"
              >
                <stop
                  offset="0"
                  stop-color="#8764B8"
                />
                <stop
                  offset="100%"
                  stop-color="#8764B8"
                />
              </lineargradient>
            </defs>
            <path
              aria-label="link from 172.152.48.13 to 192.564.10.2 with weight 50"
              d="M172,281.538C455.5,281.538,455.5,281.538,739,281.538L739,430C455.5,430,455.5,430,172,430Z"
              fill-opacity="1"
              id="link1-1"
              role="img"
              stroke="#757575"
              stroke-opacity="1"
              stroke-width="2"
              tabindex="0"
            />
          </g>
        </g>
        <g
          class="fui-sc__nodes"
        >
          <g
            id="nodeGElement6-2"
          >
            <rect
              aria-label="node 124.360.55.1 with weight 80"
              fill="#757575"
              height="237.53846153846155"
              id="nodeBar5-2"
              opacity="1"
              role="img"
              stroke="#4B3867"
              stroke-width="2"
              tabindex="0"
              width="124"
              x="739"
              y="36"
            />
            <g
              class="fui-sc__nodeTextContainer"
            >
              <g
                class="nodeName"
              >
                <text
                  aria-hidden="true"
                  dx="0.4em"
                  dy="1.2em"
                  fill="#FFFFFF"
                  font-size="10"
                  font-weight="regular"
                  id="nodeBar5-2-name"
                  text-anchor="start"
                  x="739"
                  y="36"
                >
                  124.360.55.1
                </text>
              </g>
              <text
                aria-hidden="true"
                dx="0.4em"
                dy="2em"
                fill="#FFFFFF"
                font-size="14"
                font-weight="bold"
                text-anchor="start"
                x="739"
                y="36"
              >
                80
              </text>
            </g>
          </g>
        </g>
        <g
          class="fui-sc__nodes"
        >
          <g
            id="nodeGElement6-3"
          >
            <rect
              aria-label="node 192.564.10.2 with weight 50"
              fill="#8764B8"
              height="148.46153846153845"
              id="nodeBar5-3"
              opacity="1"
              role="img"
              stroke="#4B3867"
              stroke-width="2"
              tabindex="0"
              width="124"
              x="739"
              y="281.53846153846155"
            />
            <g
              class="fui-sc__nodeTextContainer"
            >
              <g
                class="nodeName"
              >
                <text
                  aria-hidden="true"
                  dx="0.4em"
                  dy="1.2em"
                  fill="#FFFFFF"
                  font-size="10"
                  font-weight="regular"
                  id="nodeBar5-3-name"
                  text-anchor="start"
                  x="739"
                  y="281.53846153846155"
                >
                  192.564.10.2
                </text>
              </g>
              <text
                aria-hidden="true"
                dx="0.4em"
                dy="2em"
                fill="#FFFFFF"
                font-size="14"
                font-weight="bold"
                text-anchor="start"
                x="739"
                y="281.53846153846155"
              >
                50
              </text>
            </g>
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;
